...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Make all components scrollable when textExplanation gets long -->
    <!-- Editable Title at Center of Toolbar -->
    <EditText
        android:id="@+id/mood_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/emotion_arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/content_desc_arrow_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotional_state_banner" />

    <!-- Selected Mood Bubble -->
    <TextView
        android:id="@+id/selected_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/text_input_rounded_box"
        android:padding="12dp"
...
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Trigger response EditText -->
    <EditText
        android:id="@+id/trigger_response"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/situation_arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/content_desc_arrow_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintTop_toBottomOf="@+id/social_situation_banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Selected Social Situation Bubble -->
    <TextView
        android:id="@+id/selected_situation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/text_input_rounded_box"
        android:padding="12dp"
...
        app:layout_constraintTop_toBottomOf="@+id/situation_spinner"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- Add Photo Button -->
    <FrameLayout
        android:id="@+id/confirm_mood_create_button"
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
