<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mood_event_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGreen">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/view_event_toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/toolbar_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Editable Title at Center of Toolbar -->
    <TextView
        android:id="@+id/event_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:shadowColor="@android:color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/view_event_toolbar"
        app:layout_constraintBottom_toBottomOf="@+id/view_event_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Back Button (top-left) -->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/content_desc_back_icon"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/view_event_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_event_toolbar" />

    <!-- Public/Private Status (Top Right) -->

    <ImageView
        android:id="@+id/public_status_detail"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/public_icon"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/private_status_detail"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/private_icon"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- ScrollView Wrapping Everything Below Toolbar -->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_event_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <!-- Date -->
            <TextView
                android:id="@+id/event_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Posted By -->
            <TextView
                android:id="@+id/event_detail_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/posted_by"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Mood -->
            <TextView
                android:id="@+id/event_detail_mood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/mood"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/selected_mood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/coloured_bg_for_event_details"
                android:text="@string/excited"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Reason -->
            <TextView
                android:id="@+id/event_detail_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/reason_passed_my_exam"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Social Situation -->
            <TextView
                android:id="@+id/event_detail_situation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/social_situation_with_friends"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Event Image -->
            <ImageView
                android:id="@+id/event_full_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/event_image"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_constraintDimensionRatio="4:3" />


                <!-- Comments List -->
            <LinearLayout
                android:id="@+id/comment_section_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <!-- Comments Section Title -->
                <TextView
                    android:id="@+id/comments_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/comments"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <!-- Placeholder for No Comments -->
                <TextView
                    android:id="@+id/no_comments_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="No comments yet"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comments_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="340dp"
                    android:background="@android:color/white"
                    android:overScrollMode="always"
                    android:padding="8dp"
                    android:nestedScrollingEnabled="true"
                    android:visibility="gone" />
            </LinearLayout>
            <!-- DELETE and UPDATE STATUS button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <!-- DELETE button -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/delete_button"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_background"
                    android:clickable="true"
                    android:text="DELETE"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_button"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/rounded_background"
                    android:clickable="true"
                    android:text="EDIT"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>