...
    <string name="ok_button_text">OK</string>

    <!-- Dropdown Menu Text -->
    <string name="emotional_state_text">How are you feeling?</string>

    <string-array name="emotional_state_list">
        <item>Anger</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happiness</item>
        <item>Sadness</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>

    <string-array name="social_situation_list">
        <item>Alone</item>
        <item>With one other person</item>
        <item>With two to several people</item>
        <item>With a crowd</item>
    </string-array>

    <string-array name="filter_options">
...
